@@ -345,4 +345,5 @@ Zhcon_0 = 'Zhcon'
 Zhcon_1 = _('Help you display Chinese characters in TTY terminal. You can launch it by "zhcon --utf8".')
 Zim_0 = 'Zim'
 Zim_1 = _('Notebook software which helps you create a wiki to your desktop')
-
+Brasero_0 = 'Brasero'
+Brasero_1 = _('a simple application to burn CD/DVD')
