@@ -103,6 +103,7 @@ def get_signing_key_path(signing_key_fingerprint):
     assert isinstance(signing_key_fingerprint, str) and signing_key_fingerprint
     return A + '/publickey/launchpad_' + signing_key_fingerprint
 
+
 class _launchpad(I):
     this_is_a_repository = True
     category = 'repository'
@@ -382,3 +383,16 @@ class Repo_Docky(_launchpad):
 class Repo_CairoDock(_launchpad):
     'Cairo Dock'
     ppa = 'cairo-dock-team/weekly'
+    
+class Repo_OpenFetion(_launchpad):
+    'Openfetion'
+    detail = _('Send and receive SMS free of charge between PCs and mobile phones.')
+    content = 'openfetion'
+    ppa = 'happyaron/ppa'
+    Chinese = True
+    
+class Repo_Pino(_launchpad):
+    'pino'
+    detail = _('A simple and fast X11 client for Twitter and Identi.ca')
+    content = 'pino'
+    ppa = 'troorl/pino'
